Fix overflow for bio text

--- a/src/app/components/suggestion-card/suggestion-card.component.scss
+++ b/src/app/components/suggestion-card/suggestion-card.component.scss
@@ -10,7 +10,7 @@
 
 .bio {
   overflow: hidden;
-  max-height: 110px;
+  max-height: 108px;
 }
 
 ion-card-header {
